--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -221,6 +221,7 @@ allow 172.81.131.111;
 allow 172.81.131.139;
 allow 172.81.131.156;
 allow 172.81.132.94;
+allow 172.86.78.215;
 allow 173.0.3.111;
 allow 173.249.57.253;
 allow 173.255.198.243;
@@ -395,7 +396,6 @@ allow 185.220.101.155;
 allow 185.220.101.156;
 allow 185.220.101.157;
 allow 185.220.101.158;
-allow 185.220.101.159;
 allow 185.220.101.16;
 allow 185.220.101.161;
 allow 185.220.101.162;
@@ -1097,6 +1097,7 @@ allow 2602:2da:0:33:5054:ff:fe6c:39dc;
 allow 2602:2da:0:34:5054:ff:fe7e:7c21;
 allow 2602:2e5::104;
 allow 2602:2e6:0:4::;
+allow 2602:fa59:2:17e::1;
 allow 2602:fc24:12:4870:39ca:318:0:1;
 allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:12:a679::1;
@@ -1452,7 +1453,6 @@ allow 2a04:52c0:105:78fc::1;
 allow 2a04:52c0:105:98a3::1;
 allow 2a04:52c0:108:a34f::1;
 allow 2a04:52c0:116:e0e3::1;
-allow 2a04:52c0:126:3ab8::1;
 allow 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 allow 2a04:52c0:130:896e::1;
 allow 2a04:52c0:130:d285::1;
@@ -1535,7 +1535,6 @@ allow 2a0b:f4c2:1::155;
 allow 2a0b:f4c2:1::156;
 allow 2a0b:f4c2:1::157;
 allow 2a0b:f4c2:1::158;
-allow 2a0b:f4c2:1::159;
 allow 2a0b:f4c2:1::161;
 allow 2a0b:f4c2:1::162;
 allow 2a0b:f4c2:1::163;
@@ -1743,11 +1742,13 @@ allow 2a12:a800:2:1:45:138:16:230;
 allow 2a12:a800:2:1:45:138:16:240;
 allow 2a12:a800:2:1:45:138:16:42;
 allow 2a12:a800:2:1:45:138:16:76;
+allow 2a12:a800:2:1:45:141:215:111;
 allow 2a12:a800:2:1:45:141:215:114;
 allow 2a12:a800:2:1:45:141:215:116;
 allow 2a12:a800:2:1:45:141:215:169;
 allow 2a12:a800:2:1:45:141:215:17;
 allow 2a12:a800:2:1:45:141:215:21;
+allow 2a12:a800:2:1:45:141:215:28;
 allow 2a12:a800:2:1:45:141:215:56;
 allow 2a12:a800:2:1:45:141:215:61;
 allow 2a12:a800:2:1:45:141:215:80;
@@ -1799,7 +1800,7 @@ allow 45.118.133.44;
 allow 45.12.3.80;
 allow 45.128.133.242;
 allow 45.129.84.246;
-allow 45.129.84.247;
+allow 45.129.84.248;
 allow 45.129.84.249;
 allow 45.132.246.245;
 allow 45.134.225.36;
@@ -1823,6 +1824,7 @@ allow 45.141.215.169;
 allow 45.141.215.17;
 allow 45.141.215.19;
 allow 45.141.215.21;
+allow 45.141.215.28;
 allow 45.141.215.40;
 allow 45.141.215.56;
 allow 45.141.215.61;
@@ -1905,7 +1907,6 @@ allow 5.255.111.64;
 allow 5.255.115.58;
 allow 5.255.117.56;
 allow 5.255.118.244;
-allow 5.255.121.71;
 allow 5.255.123.158;
 allow 5.255.123.164;
 allow 5.255.124.150;
