--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -1670,7 +1670,6 @@ allow 2a0b:f4c2::9;
 allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:e300::23;
 allow 2a0d:8140:1fff:34cd::1;
-allow 2a0d:8140:1fff:4df3::1;
 allow 2a0d:bbc7:0:1::254;
 allow 2a0d:bbc7:0:1::320;
 allow 2a0d:bbc7:0:1::394;
@@ -1747,8 +1746,10 @@ allow 2a12:a800:2:1:45:141:215:114;
 allow 2a12:a800:2:1:45:141:215:116;
 allow 2a12:a800:2:1:45:141:215:169;
 allow 2a12:a800:2:1:45:141:215:17;
+allow 2a12:a800:2:1:45:141:215:19;
 allow 2a12:a800:2:1:45:141:215:21;
 allow 2a12:a800:2:1:45:141:215:28;
+allow 2a12:a800:2:1:45:141:215:40;
 allow 2a12:a800:2:1:45:141:215:56;
 allow 2a12:a800:2:1:45:141:215:61;
 allow 2a12:a800:2:1:45:141:215:80;
@@ -1756,6 +1757,7 @@ allow 2a12:a800:2:1:45:141:215:81;
 allow 2a12:a800:2:1:45:141:215:88;
 allow 2a12:a800:2:1:45:141:215:90;
 allow 2a12:a800:2:1:45:141:215:97;
+allow 2a12:a800:2:1:45:80:158:23;
 allow 2a12:bec4:11d3:de9f::1;
 allow 2a12:d8c0:109a:9001::7;
 allow 2a12:dd47:8513::10;
@@ -1800,8 +1802,6 @@ allow 45.118.133.44;
 allow 45.12.3.80;
 allow 45.128.133.242;
 allow 45.129.84.246;
-allow 45.129.84.248;
-allow 45.129.84.249;
 allow 45.132.246.245;
 allow 45.134.225.36;
 allow 45.137.205.138;
@@ -2043,7 +2043,6 @@ allow 92.243.24.163;
 allow 92.246.138.145;
 allow 92.246.84.133;
 allow 92.42.102.69;
-allow 93.113.25.113;
 allow 93.113.25.221;
 allow 93.123.12.112;
 allow 93.185.165.211;
