--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -703,7 +703,6 @@ allow 2a0b:f4c2::9;
 allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:e300::23;
 allow 2a0d:8140:1fff:34cd::1;
-allow 2a0d:8140:1fff:4df3::1;
 allow 2a0d:bbc7:0:1::254;
 allow 2a0d:bbc7:0:1::320;
 allow 2a0d:bbc7:0:1::394;
@@ -780,8 +779,10 @@ allow 2a12:a800:2:1:45:141:215:114;
 allow 2a12:a800:2:1:45:141:215:116;
 allow 2a12:a800:2:1:45:141:215:169;
 allow 2a12:a800:2:1:45:141:215:17;
+allow 2a12:a800:2:1:45:141:215:19;
 allow 2a12:a800:2:1:45:141:215:21;
 allow 2a12:a800:2:1:45:141:215:28;
+allow 2a12:a800:2:1:45:141:215:40;
 allow 2a12:a800:2:1:45:141:215:56;
 allow 2a12:a800:2:1:45:141:215:61;
 allow 2a12:a800:2:1:45:141:215:80;
@@ -789,6 +790,7 @@ allow 2a12:a800:2:1:45:141:215:81;
 allow 2a12:a800:2:1:45:141:215:88;
 allow 2a12:a800:2:1:45:141:215:90;
 allow 2a12:a800:2:1:45:141:215:97;
+allow 2a12:a800:2:1:45:80:158:23;
 allow 2a12:bec4:11d3:de9f::1;
 allow 2a12:d8c0:109a:9001::7;
 allow 2a12:dd47:8513::10;
