--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -168,6 +168,7 @@ allow 154.213.184.39;
 allow 154.213.184.42;
 allow 154.213.184.44;
 allow 154.213.184.5;
+allow 154.213.184.56;
 allow 154.213.184.63;
 allow 154.213.184.7;
 allow 154.213.184.70;
@@ -222,6 +223,7 @@ allow 172.81.131.111;
 allow 172.81.131.139;
 allow 172.81.131.156;
 allow 172.81.132.94;
+allow 172.86.78.215;
 allow 173.0.3.111;
 allow 173.249.57.253;
 allow 173.255.198.243;
@@ -242,6 +244,8 @@ allow 178.17.174.164;
 allow 178.175.131.141;
 allow 178.175.148.209;
 allow 178.175.148.246;
+allow 178.20.55.16;
+allow 178.20.55.182;
 allow 178.218.144.18;
 allow 178.218.144.51;
 allow 178.218.144.64;
@@ -301,14 +305,12 @@ allow 185.129.62.63;
 allow 185.130.44.108;
 allow 185.130.44.43;
 allow 185.130.47.58;
-allow 185.132.53.12;
 allow 185.142.239.49;
 allow 185.149.146.193;
 allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
-allow 185.165.169.42;
 allow 185.165.171.84;
 allow 185.168.192.178;
 allow 185.170.114.25;
@@ -1064,6 +1066,7 @@ allow 23.154.177.7;
 allow 23.154.177.8;
 allow 23.154.177.9;
 allow 23.155.24.4;
+allow 23.155.8.104;
 allow 23.173.216.67;
 allow 23.184.48.13;
 allow 23.94.211.25;
@@ -1091,6 +1094,7 @@ allow 2600:3c03::f03c:95ff:fe5d:562;
 allow 2600:3c0a::f03c:95ff:fe5d:a877;
 allow 2602:2da:0:33:5054:ff:fe6c:39dc;
 allow 2602:2da:0:34:5054:ff:fe7e:7c21;
+allow 2602:2e5::104;
 allow 2602:2e6:0:4::;
 allow 2602:fc24:12:4870:39ca:318:0:1;
 allow 2602:fc24:12:81a6::1;
@@ -1370,6 +1374,8 @@ allow 2a00:16b0:1:243::7012:3117;
 allow 2a00:16b0:1:243::7012:a500;
 allow 2a00:16b0:1:243::7012:e817;
 allow 2a00:1728:f:f:f:f:c03c:9898;
+allow 2a00:1b88:4::2;
+allow 2a00:1b88:4::4;
 allow 2a00:1dc0:caff:12c::4d3a;
 allow 2a00:1dc0:caff:138::94d2;
 allow 2a00:1dc0:caff:15::45dc;
@@ -1483,7 +1489,7 @@ allow 2a06:e80:3000:1:bad:babe:ca11:911;
 allow 2a07:e01:2:13::2;
 allow 2a07:e03:2a::bcde;
 allow 2a09:6301:0:2e1:b492:c29e:f532:42c6;
-allow 2a0b:64c0:1::1d1;
+allow 2a0b:4140:c333::2;
 allow 2a0b:f4c0:16c:10::1;
 allow 2a0b:f4c0:16c:1::1;
 allow 2a0b:f4c0:16c:11::1;
@@ -1771,6 +1777,7 @@ allow 2a12:dd47:8513::11;
 allow 2a12:dd47:8513::12;
 allow 2a12:dd47:8513::13;
 allow 2a12:dd47:8513::14;
+allow 2a12:dd47:8513::15;
 allow 2a12:dd47:8513::2;
 allow 2a12:dd47:8513::3;
 allow 2a12:dd47:8513::4;
@@ -1808,8 +1815,10 @@ allow 45.118.133.44;
 allow 45.12.3.80;
 allow 45.128.133.242;
 allow 45.129.84.246;
+allow 45.129.84.247;
 allow 45.132.246.245;
 allow 45.134.225.36;
+allow 45.135.180.27;
 allow 45.137.205.138;
 allow 45.137.205.140;
 allow 45.138.16.107;
@@ -1821,7 +1830,6 @@ allow 45.138.16.240;
 allow 45.138.16.249;
 allow 45.138.16.42;
 allow 45.138.16.76;
-allow 45.140.188.55;
 allow 45.141.215.110;
 allow 45.141.215.111;
 allow 45.141.215.114;
@@ -1961,6 +1969,7 @@ allow 72.235.129.116;
 allow 74.82.47.194;
 allow 77.105.146.42;
 allow 77.220.196.253;
+allow 77.221.142.194;
 allow 77.221.152.105;
 allow 77.221.157.237;
 allow 77.221.159.184;
