--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -168,6 +168,7 @@ set_real_ip_from 154.213.184.39;
 set_real_ip_from 154.213.184.42;
 set_real_ip_from 154.213.184.44;
 set_real_ip_from 154.213.184.5;
+set_real_ip_from 154.213.184.56;
 set_real_ip_from 154.213.184.63;
 set_real_ip_from 154.213.184.7;
 set_real_ip_from 154.213.184.70;
@@ -222,6 +223,7 @@ set_real_ip_from 172.81.131.111;
 set_real_ip_from 172.81.131.139;
 set_real_ip_from 172.81.131.156;
 set_real_ip_from 172.81.132.94;
+set_real_ip_from 172.86.78.215;
 set_real_ip_from 173.0.3.111;
 set_real_ip_from 173.249.57.253;
 set_real_ip_from 173.255.198.243;
@@ -242,6 +244,8 @@ set_real_ip_from 178.17.174.164;
 set_real_ip_from 178.175.131.141;
 set_real_ip_from 178.175.148.209;
 set_real_ip_from 178.175.148.246;
+set_real_ip_from 178.20.55.16;
+set_real_ip_from 178.20.55.182;
 set_real_ip_from 178.218.144.18;
 set_real_ip_from 178.218.144.51;
 set_real_ip_from 178.218.144.64;
@@ -301,14 +305,12 @@ set_real_ip_from 185.129.62.63;
 set_real_ip_from 185.130.44.108;
 set_real_ip_from 185.130.44.43;
 set_real_ip_from 185.130.47.58;
-set_real_ip_from 185.132.53.12;
 set_real_ip_from 185.142.239.49;
 set_real_ip_from 185.149.146.193;
 set_real_ip_from 185.153.197.227;
 set_real_ip_from 185.154.110.142;
 set_real_ip_from 185.154.110.17;
 set_real_ip_from 185.165.169.239;
-set_real_ip_from 185.165.169.42;
 set_real_ip_from 185.165.171.84;
 set_real_ip_from 185.168.192.178;
 set_real_ip_from 185.170.114.25;
@@ -1064,6 +1066,7 @@ set_real_ip_from 23.154.177.7;
 set_real_ip_from 23.154.177.8;
 set_real_ip_from 23.154.177.9;
 set_real_ip_from 23.155.24.4;
+set_real_ip_from 23.155.8.104;
 set_real_ip_from 23.173.216.67;
 set_real_ip_from 23.184.48.13;
 set_real_ip_from 23.94.211.25;
@@ -1091,6 +1094,7 @@ set_real_ip_from 2600:3c03::f03c:95ff:fe5d:562;
 set_real_ip_from 2600:3c0a::f03c:95ff:fe5d:a877;
 set_real_ip_from 2602:2da:0:33:5054:ff:fe6c:39dc;
 set_real_ip_from 2602:2da:0:34:5054:ff:fe7e:7c21;
+set_real_ip_from 2602:2e5::104;
 set_real_ip_from 2602:2e6:0:4::;
 set_real_ip_from 2602:fc24:12:4870:39ca:318:0:1;
 set_real_ip_from 2602:fc24:12:81a6::1;
@@ -1370,6 +1374,8 @@ set_real_ip_from 2a00:16b0:1:243::7012:3117;
 set_real_ip_from 2a00:16b0:1:243::7012:a500;
 set_real_ip_from 2a00:16b0:1:243::7012:e817;
 set_real_ip_from 2a00:1728:f:f:f:f:c03c:9898;
+set_real_ip_from 2a00:1b88:4::2;
+set_real_ip_from 2a00:1b88:4::4;
 set_real_ip_from 2a00:1dc0:caff:12c::4d3a;
 set_real_ip_from 2a00:1dc0:caff:138::94d2;
 set_real_ip_from 2a00:1dc0:caff:15::45dc;
@@ -1483,7 +1489,7 @@ set_real_ip_from 2a06:e80:3000:1:bad:babe:ca11:911;
 set_real_ip_from 2a07:e01:2:13::2;
 set_real_ip_from 2a07:e03:2a::bcde;
 set_real_ip_from 2a09:6301:0:2e1:b492:c29e:f532:42c6;
-set_real_ip_from 2a0b:64c0:1::1d1;
+set_real_ip_from 2a0b:4140:c333::2;
 set_real_ip_from 2a0b:f4c0:16c:10::1;
 set_real_ip_from 2a0b:f4c0:16c:1::1;
 set_real_ip_from 2a0b:f4c0:16c:11::1;
@@ -1771,6 +1777,7 @@ set_real_ip_from 2a12:dd47:8513::11;
 set_real_ip_from 2a12:dd47:8513::12;
 set_real_ip_from 2a12:dd47:8513::13;
 set_real_ip_from 2a12:dd47:8513::14;
+set_real_ip_from 2a12:dd47:8513::15;
 set_real_ip_from 2a12:dd47:8513::2;
 set_real_ip_from 2a12:dd47:8513::3;
 set_real_ip_from 2a12:dd47:8513::4;
@@ -1808,8 +1815,10 @@ set_real_ip_from 45.118.133.44;
 set_real_ip_from 45.12.3.80;
 set_real_ip_from 45.128.133.242;
 set_real_ip_from 45.129.84.246;
+set_real_ip_from 45.129.84.247;
 set_real_ip_from 45.132.246.245;
 set_real_ip_from 45.134.225.36;
+set_real_ip_from 45.135.180.27;
 set_real_ip_from 45.137.205.138;
 set_real_ip_from 45.137.205.140;
 set_real_ip_from 45.138.16.107;
@@ -1821,7 +1830,6 @@ set_real_ip_from 45.138.16.240;
 set_real_ip_from 45.138.16.249;
 set_real_ip_from 45.138.16.42;
 set_real_ip_from 45.138.16.76;
-set_real_ip_from 45.140.188.55;
 set_real_ip_from 45.141.215.110;
 set_real_ip_from 45.141.215.111;
 set_real_ip_from 45.141.215.114;
@@ -1961,6 +1969,7 @@ set_real_ip_from 72.235.129.116;
 set_real_ip_from 74.82.47.194;
 set_real_ip_from 77.105.146.42;
 set_real_ip_from 77.220.196.253;
+set_real_ip_from 77.221.142.194;
 set_real_ip_from 77.221.152.105;
 set_real_ip_from 77.221.157.237;
 set_real_ip_from 77.221.159.184;
