--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -168,6 +168,7 @@ allow 154.213.184.39;
 allow 154.213.184.42;
 allow 154.213.184.44;
 allow 154.213.184.5;
+allow 154.213.184.50;
 allow 154.213.184.56;
 allow 154.213.184.63;
 allow 154.213.184.7;
@@ -227,6 +228,7 @@ allow 173.0.3.111;
 allow 173.249.57.253;
 allow 173.255.198.243;
 allow 176.118.193.33;
+allow 176.121.81.51;
 allow 176.126.253.190;
 allow 176.227.215.50;
 allow 176.58.100.98;
@@ -234,6 +236,7 @@ allow 176.58.121.177;
 allow 176.58.89.182;
 allow 176.97.114.182;
 allow 176.97.114.202;
+allow 177.149.142.251;
 allow 178.17.170.144;
 allow 178.17.170.223;
 allow 178.17.170.23;
@@ -262,7 +265,6 @@ allow 179.43.159.201;
 allow 179.43.159.78;
 allow 179.43.182.232;
 allow 179.43.182.58;
-allow 179.55.71.119;
 allow 180.150.226.99;
 allow 185.100.85.132;
 allow 185.100.85.22;
@@ -1350,6 +1352,7 @@ allow 2a00:1dc0:caff:83::a43b;
 allow 2a00:1dc0:caff:8b::24bd;
 allow 2a00:99a0:0:1000::2;
 allow 2a00:da00:f23d:8f00::1;
+allow 2a01:4262:1ab:ffff::133;
 allow 2a01:5e0:36:c311::1;
 allow 2a01:5e0:36:cf2a::1;
 allow 2a01:6340:2:501::10;
@@ -1658,6 +1661,7 @@ allow 2a0e:e701:1198::1;
 allow 2a0e:fa00:0:1b::1;
 allow 2a0f:85c1:356:3238::1;
 allow 2a0f:93c1:26:1f2::9ce5;
+allow 2a0f:9400:7e11:8ba1::1;
 allow 2a0f:ca80:0:e57f::82e1:3f1b;
 allow 2a0f:df00:0:255::194;
 allow 2a0f:df00:0:255::195;
@@ -1742,6 +1746,7 @@ allow 2a12:dd47:8513::12;
 allow 2a12:dd47:8513::13;
 allow 2a12:dd47:8513::14;
 allow 2a12:dd47:8513::15;
+allow 2a12:dd47:8513::16;
 allow 2a12:dd47:8513::2;
 allow 2a12:dd47:8513::3;
 allow 2a12:dd47:8513::4;
@@ -1991,6 +1996,7 @@ allow 89.147.110.82;
 allow 89.147.111.124;
 allow 89.185.85.140;
 allow 89.187.143.31;
+allow 89.213.174.212;
 allow 89.234.157.254;
 allow 89.236.112.100;
 allow 89.37.95.34;
@@ -2040,6 +2046,7 @@ allow 94.142.244.16;
 allow 94.143.231.53;
 allow 94.16.115.121;
 allow 94.16.116.81;
+allow 94.16.116.86;
 allow 94.16.121.91;
 allow 94.177.106.54;
 allow 94.228.163.25;
