--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -168,6 +168,7 @@ deny 154.213.184.39;
 deny 154.213.184.42;
 deny 154.213.184.44;
 deny 154.213.184.5;
+deny 154.213.184.50;
 deny 154.213.184.56;
 deny 154.213.184.63;
 deny 154.213.184.7;
@@ -227,6 +228,7 @@ deny 173.0.3.111;
 deny 173.249.57.253;
 deny 173.255.198.243;
 deny 176.118.193.33;
+deny 176.121.81.51;
 deny 176.126.253.190;
 deny 176.227.215.50;
 deny 176.58.100.98;
@@ -234,6 +236,7 @@ deny 176.58.121.177;
 deny 176.58.89.182;
 deny 176.97.114.182;
 deny 176.97.114.202;
+deny 177.149.142.251;
 deny 178.17.170.144;
 deny 178.17.170.223;
 deny 178.17.170.23;
@@ -262,7 +265,6 @@ deny 179.43.159.201;
 deny 179.43.159.78;
 deny 179.43.182.232;
 deny 179.43.182.58;
-deny 179.55.71.119;
 deny 180.150.226.99;
 deny 185.100.85.132;
 deny 185.100.85.22;
@@ -1350,6 +1352,7 @@ deny 2a00:1dc0:caff:83::a43b;
 deny 2a00:1dc0:caff:8b::24bd;
 deny 2a00:99a0:0:1000::2;
 deny 2a00:da00:f23d:8f00::1;
+deny 2a01:4262:1ab:ffff::133;
 deny 2a01:5e0:36:c311::1;
 deny 2a01:5e0:36:cf2a::1;
 deny 2a01:6340:2:501::10;
@@ -1658,6 +1661,7 @@ deny 2a0e:e701:1198::1;
 deny 2a0e:fa00:0:1b::1;
 deny 2a0f:85c1:356:3238::1;
 deny 2a0f:93c1:26:1f2::9ce5;
+deny 2a0f:9400:7e11:8ba1::1;
 deny 2a0f:ca80:0:e57f::82e1:3f1b;
 deny 2a0f:df00:0:255::194;
 deny 2a0f:df00:0:255::195;
@@ -1742,6 +1746,7 @@ deny 2a12:dd47:8513::12;
 deny 2a12:dd47:8513::13;
 deny 2a12:dd47:8513::14;
 deny 2a12:dd47:8513::15;
+deny 2a12:dd47:8513::16;
 deny 2a12:dd47:8513::2;
 deny 2a12:dd47:8513::3;
 deny 2a12:dd47:8513::4;
@@ -1991,6 +1996,7 @@ deny 89.147.110.82;
 deny 89.147.111.124;
 deny 89.185.85.140;
 deny 89.187.143.31;
+deny 89.213.174.212;
 deny 89.234.157.254;
 deny 89.236.112.100;
 deny 89.37.95.34;
@@ -2040,6 +2046,7 @@ deny 94.142.244.16;
 deny 94.143.231.53;
 deny 94.16.115.121;
 deny 94.16.116.81;
+deny 94.16.116.86;
 deny 94.16.121.91;
 deny 94.177.106.54;
 deny 94.228.163.25;
