--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -168,6 +168,7 @@ set_real_ip_from 154.213.184.39;
 set_real_ip_from 154.213.184.42;
 set_real_ip_from 154.213.184.44;
 set_real_ip_from 154.213.184.5;
+set_real_ip_from 154.213.184.50;
 set_real_ip_from 154.213.184.56;
 set_real_ip_from 154.213.184.63;
 set_real_ip_from 154.213.184.7;
@@ -227,6 +228,7 @@ set_real_ip_from 173.0.3.111;
 set_real_ip_from 173.249.57.253;
 set_real_ip_from 173.255.198.243;
 set_real_ip_from 176.118.193.33;
+set_real_ip_from 176.121.81.51;
 set_real_ip_from 176.126.253.190;
 set_real_ip_from 176.227.215.50;
 set_real_ip_from 176.58.100.98;
@@ -234,6 +236,7 @@ set_real_ip_from 176.58.121.177;
 set_real_ip_from 176.58.89.182;
 set_real_ip_from 176.97.114.182;
 set_real_ip_from 176.97.114.202;
+set_real_ip_from 177.149.142.251;
 set_real_ip_from 178.17.170.144;
 set_real_ip_from 178.17.170.223;
 set_real_ip_from 178.17.170.23;
@@ -262,7 +265,6 @@ set_real_ip_from 179.43.159.201;
 set_real_ip_from 179.43.159.78;
 set_real_ip_from 179.43.182.232;
 set_real_ip_from 179.43.182.58;
-set_real_ip_from 179.55.71.119;
 set_real_ip_from 180.150.226.99;
 set_real_ip_from 185.100.85.132;
 set_real_ip_from 185.100.85.22;
@@ -1350,6 +1352,7 @@ set_real_ip_from 2a00:1dc0:caff:83::a43b;
 set_real_ip_from 2a00:1dc0:caff:8b::24bd;
 set_real_ip_from 2a00:99a0:0:1000::2;
 set_real_ip_from 2a00:da00:f23d:8f00::1;
+set_real_ip_from 2a01:4262:1ab:ffff::133;
 set_real_ip_from 2a01:5e0:36:c311::1;
 set_real_ip_from 2a01:5e0:36:cf2a::1;
 set_real_ip_from 2a01:6340:2:501::10;
@@ -1658,6 +1661,7 @@ set_real_ip_from 2a0e:e701:1198::1;
 set_real_ip_from 2a0e:fa00:0:1b::1;
 set_real_ip_from 2a0f:85c1:356:3238::1;
 set_real_ip_from 2a0f:93c1:26:1f2::9ce5;
+set_real_ip_from 2a0f:9400:7e11:8ba1::1;
 set_real_ip_from 2a0f:ca80:0:e57f::82e1:3f1b;
 set_real_ip_from 2a0f:df00:0:255::194;
 set_real_ip_from 2a0f:df00:0:255::195;
@@ -1742,6 +1746,7 @@ set_real_ip_from 2a12:dd47:8513::12;
 set_real_ip_from 2a12:dd47:8513::13;
 set_real_ip_from 2a12:dd47:8513::14;
 set_real_ip_from 2a12:dd47:8513::15;
+set_real_ip_from 2a12:dd47:8513::16;
 set_real_ip_from 2a12:dd47:8513::2;
 set_real_ip_from 2a12:dd47:8513::3;
 set_real_ip_from 2a12:dd47:8513::4;
@@ -1991,6 +1996,7 @@ set_real_ip_from 89.147.110.82;
 set_real_ip_from 89.147.111.124;
 set_real_ip_from 89.185.85.140;
 set_real_ip_from 89.187.143.31;
+set_real_ip_from 89.213.174.212;
 set_real_ip_from 89.234.157.254;
 set_real_ip_from 89.236.112.100;
 set_real_ip_from 89.37.95.34;
@@ -2040,6 +2046,7 @@ set_real_ip_from 94.142.244.16;
 set_real_ip_from 94.143.231.53;
 set_real_ip_from 94.16.115.121;
 set_real_ip_from 94.16.116.81;
+set_real_ip_from 94.16.116.86;
 set_real_ip_from 94.16.121.91;
 set_real_ip_from 94.177.106.54;
 set_real_ip_from 94.228.163.25;
