--- a/set_real_ip_from-tor_ips_v4.conf
+++ b/set_real_ip_from-tor_ips_v4.conf
@@ -727,6 +727,7 @@ set_real_ip_from 199.195.253.156;
 set_real_ip_from 199.195.253.180;
 set_real_ip_from 199.195.253.247;
 set_real_ip_from 199.7.140.230;
+set_real_ip_from 200.122.181.2;
 set_real_ip_from 201.23.12.101;
 set_real_ip_from 201.23.14.225;
 set_real_ip_from 201.23.16.249;
@@ -973,6 +974,7 @@ set_real_ip_from 45.118.133.44;
 set_real_ip_from 45.12.3.80;
 set_real_ip_from 45.128.133.242;
 set_real_ip_from 45.129.84.246;
+set_real_ip_from 45.129.84.247;
 set_real_ip_from 45.132.246.245;
 set_real_ip_from 45.134.225.36;
 set_real_ip_from 45.137.205.138;
@@ -1122,6 +1124,7 @@ set_real_ip_from 72.211.49.235;
 set_real_ip_from 72.235.129.116;
 set_real_ip_from 74.82.47.194;
 set_real_ip_from 77.105.146.42;
+set_real_ip_from 77.220.196.253;
 set_real_ip_from 77.221.142.194;
 set_real_ip_from 77.221.152.105;
 set_real_ip_from 77.221.157.237;
@@ -1182,6 +1185,7 @@ set_real_ip_from 89.147.110.82;
 set_real_ip_from 89.147.111.124;
 set_real_ip_from 89.185.85.140;
 set_real_ip_from 89.187.143.31;
+set_real_ip_from 89.213.174.212;
 set_real_ip_from 89.234.157.254;
 set_real_ip_from 89.236.112.100;
 set_real_ip_from 89.37.95.34;
@@ -1231,6 +1235,7 @@ set_real_ip_from 94.142.244.16;
 set_real_ip_from 94.143.231.53;
 set_real_ip_from 94.16.115.121;
 set_real_ip_from 94.16.116.81;
+set_real_ip_from 94.16.116.86;
 set_real_ip_from 94.16.121.91;
 set_real_ip_from 94.177.106.54;
 set_real_ip_from 94.228.163.25;
