--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -136,8 +136,8 @@ allow 138.59.18.110;
 allow 139.162.249.209;
 allow 139.99.172.11;
 allow 139.99.8.57;
+allow 141.11.25.44;
 allow 141.11.86.155;
-allow 141.98.11.62;
 allow 141.98.119.106;
 allow 142.171.12.88;
 allow 142.44.133.81;
@@ -1067,6 +1067,7 @@ allow 2402:1f00:8100:400::9;
 allow 2406:8dc0:6004:60d7:cbc3:569a:3eee:42d5;
 allow 2406:8dc0:6005::97f2:9c02;
 allow 2407:3640:2207:8882::1;
+allow 2407:6ac0:8:1:0:1:1965:6c63;
 allow 2407:cdc0:c004::d44:d46f;
 allow 24.240.72.170;
 allow 2.56.10.36;
@@ -1637,6 +1638,7 @@ allow 2a0b:f4c2::6;
 allow 2a0b:f4c2::7;
 allow 2a0b:f4c2::8;
 allow 2a0b:f4c2::9;
+allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:e300::23;
 allow 2a0d:8140:1fff:34cd::1;
 allow 2a0d:bbc7:0:1::254;
@@ -1685,7 +1687,6 @@ allow 2a0f:e586:f:f:baa4:d491:90be:dca5;
 allow 2a0f:e586:f:f:c94a:de42:aac1:9045;
 allow 2a0f:e586:f:f:fca1:db52:9055:cff3;
 allow 2a10:c800:1:9cc6::1;
-allow 2a10:c800:1:f7f8:0:1ce:1ce:babe;
 allow 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 allow 2a11:840:54:1b::d439:2543;
 allow 2a12:5940:13e2::2;
@@ -1802,6 +1803,7 @@ allow 45.138.16.240;
 allow 45.138.16.249;
 allow 45.138.16.42;
 allow 45.138.16.76;
+allow 45.138.87.138;
 allow 45.141.215.110;
 allow 45.141.215.111;
 allow 45.141.215.114;
@@ -1979,6 +1981,7 @@ allow 84.16.224.227;
 allow 84.239.46.144;
 allow 84.252.120.163;
 allow 85.17.9.83;
+allow 85.239.41.130;
 allow 85.93.218.204;
 allow 86.205.5.107;
 allow 87.118.110.27;
@@ -2020,7 +2023,6 @@ allow 91.208.75.3;
 allow 91.208.75.4;
 allow 91.210.59.57;
 allow 91.219.236.101;
-allow 91.219.237.39;
 allow 91.219.237.56;
 allow 91.219.239.166;
 allow 91.229.132.69;
