--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -122,6 +122,7 @@ deny 2402:1f00:8100:400::9;
 deny 2406:8dc0:6004:60d7:cbc3:569a:3eee:42d5;
 deny 2406:8dc0:6005::97f2:9c02;
 deny 2407:3640:2207:8882::1;
+deny 2407:6ac0:8:1:0:1:1965:6c63;
 deny 2407:cdc0:c004::d44:d46f;
 deny 2600:3c00::f03c:91ff:fe73:f9ba;
 deny 2600:3c00::f03c:91ff:fe96:1cd9;
@@ -684,6 +685,7 @@ deny 2a0b:f4c2::6;
 deny 2a0b:f4c2::7;
 deny 2a0b:f4c2::8;
 deny 2a0b:f4c2::9;
+deny 2a0c:5cc0:1:1::293c:1518;
 deny 2a0c:e300::23;
 deny 2a0d:8140:1fff:34cd::1;
 deny 2a0d:bbc7:0:1::254;
@@ -732,7 +734,6 @@ deny 2a0f:e586:f:f:baa4:d491:90be:dca5;
 deny 2a0f:e586:f:f:c94a:de42:aac1:9045;
 deny 2a0f:e586:f:f:fca1:db52:9055:cff3;
 deny 2a10:c800:1:9cc6::1;
-deny 2a10:c800:1:f7f8:0:1ce:1ce:babe;
 deny 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 deny 2a11:840:54:1b::d439:2543;
 deny 2a12:5940:13e2::2;
